src/SegundaEtapa/y.output
   0  $accept : prog $end

   1  prog : ID BEGIN statement_list END
   2       | error BEGIN statement_list END
   3       | error
   4       | ID statement_list END
   5       | ID BEGIN statement_list error
   6       | ID statement_list
   7       |

   8  statement_list : statement
   9                 | statement_list statement

  10  statement : executable_statement
  11            | declare_pair optional_semicolon
  12            | declare_var
  13            | declare_fun
  14            | error ';'

  15  optional_semicolon : ';'
  16                     |

  17  optional_not_semicolon : ';'
  18                         |

  19  executable_statement : if_statement optional_semicolon
  20                       | assign_statement optional_semicolon
  21                       | outf_statement optional_semicolon
  22                       | repeat_statement optional_semicolon
  23                       | goto_statement optional_semicolon
  24                       | mult_assign_statement optional_semicolon
  25                       | return_statement optional_semicolon
  26                       | tag_statement optional_not_semicolon

  27  executable_statement_list : executable_statement
  28                            | executable_statement_list executable_statement

  29  declare_var : var_type var_list ';'
  30              | var_type var_list error
  31              | var_type ID ';'
  32              | var_type ID error

  33  var_list : ID ',' ID
  34           | var_list ',' ID

  35  declare_fun : declare_fun_header fun_body END

  36  declare_fun_header : var_type FUN ID '(' parametro ')' BEGIN
  37                     | var_type FUN error '(' parametro ')' BEGIN
  38                     | var_type FUN ID '(' error ')' BEGIN

  39  declare_pair : TYPEDEF PAIR '<' var_type '>' ID
  40               | TYPEDEF '<' var_type '>' ID
  41               | TYPEDEF PAIR var_type ID
  42               | TYPEDEF PAIR '<' var_type '>' error

  43  parametro : var_type ID
  44            | ID
  45            | var_type error

  46  return_statement : RET '(' expr ')'
  47                   | RET expr

  48  fun_body : statement_list

  49  var_type : UINTEGER
  50           | SINGLE
  51           | HEXA
  52           | ID

  53  if_statement : if_cond then_statement END_IF
  54               | if_cond then_statement error
  55               | if_cond then_statement else_statement

  56  if_cond : IF '(' cond ')'
  57          | IF cond
  58          | IF '(' cond
  59          | IF cond ')'

  60  then_statement : THEN ctrl_block_statement
  61                 | THEN error

  62  else_statement : else_tk ctrl_block_statement END_IF
  63                 | else_tk END_IF
  64                 | else_tk error END_IF
  65                 | else_tk ctrl_block_statement error

  66  else_tk : ELSE

  67  ctrl_block_statement : executable_statement_list

  68  cond : expr cond_op expr
  69       | error

  70  cond_op : '<'
  71          | '>'
  72          | '='
  73          | NEQ
  74          | LEQ
  75          | MEQ

  76  assign_statement : ID ASSIGN expr
  77                   | expr_pair ASSIGN expr
  78                   | var_type ID ASSIGN expr

  79  expr : expr '+' term
  80       | expr '-' term
  81       | term
  82       | error

  83  term : term '*' fact
  84       | term '/' fact
  85       | fact

  86  fact : ID
  87       | CTE
  88       | '-' CTE
  89       | '-' ID
  90       | fun_invoc
  91       | expr_pair
  92       | CHARCH

  93  expr_pair : ID '{' CTE '}'

  94  fun_invoc : ID '(' expr ')'
  95            | ID '(' expr error ')'

  96  outf_statement : OUTF '(' expr ')'
  97                 | OUTF '(' ')'
  98                 | OUTF error

  99  repeat_statement : repeat_begin executable_statement_list END UNTIL '(' cond ')'
 100                   | repeat_begin executable_statement_list END UNTIL cond
 101                   | repeat_begin executable_statement_list END UNTIL '(' cond
 102                   | repeat_begin executable_statement_list END UNTIL cond ')'
 103                   | repeat_begin END UNTIL '(' cond ')'
 104                   | repeat_begin END UNTIL cond
 105                   | repeat_begin END UNTIL '(' cond
 106                   | repeat_begin END UNTIL cond ')'
 107                   | repeat_begin executable_statement_list END '(' cond ')'
 108                   | repeat_begin executable_statement_list END UNTIL '(' ')'

 109  repeat_begin : REPEAT BEGIN

 110  mult_assign_statement : id_list ASSIGN expr_list
 111                        | id_list ASSIGN error

 112  id_list : elem_list ',' elem_list
 113          | id_list ',' elem_list

 114  elem_list : ID
 115            | expr_pair

 116  expr_list : expr ',' expr
 117            | expr_list ',' expr

 118  tag_statement : TAG

 119  goto_statement : GOTO TAG
 120                 | GOTO error

state 0
	$accept : . prog $end  (0)
	prog : .  (7)

	error  shift 1
	ID  shift 2
	$end  reduce 7

	prog  goto 3


state 1
	prog : error . BEGIN statement_list END  (2)
	prog : error .  (3)

	BEGIN  shift 4
	$end  reduce 3


state 2
	prog : ID . BEGIN statement_list END  (1)
	prog : ID . statement_list END  (4)
	prog : ID . BEGIN statement_list error  (5)
	prog : ID . statement_list  (6)

	error  shift 5
	ID  shift 6
	TAG  shift 7
	IF  shift 8
	BEGIN  shift 9
	OUTF  shift 10
	TYPEDEF  shift 11
	RET  shift 12
	UINTEGER  shift 13
	SINGLE  shift 14
	REPEAT  shift 15
	HEXA  shift 16
	GOTO  shift 17
	.  error

	statement_list  goto 18
	statement  goto 19
	executable_statement  goto 20
	declare_pair  goto 21
	declare_var  goto 22
	declare_fun  goto 23
	if_statement  goto 24
	assign_statement  goto 25
	outf_statement  goto 26
	repeat_statement  goto 27
	goto_statement  goto 28
	mult_assign_statement  goto 29
	return_statement  goto 30
	tag_statement  goto 31
	var_type  goto 32
	declare_fun_header  goto 33
	if_cond  goto 34
	expr_pair  goto 35
	repeat_begin  goto 36
	id_list  goto 37
	elem_list  goto 38


state 3
	$accept : prog . $end  (0)

	$end  accept


state 4
	prog : error BEGIN . statement_list END  (2)

	error  shift 5
	ID  shift 6
	TAG  shift 7
	IF  shift 8
	OUTF  shift 10
	TYPEDEF  shift 11
	RET  shift 12
	UINTEGER  shift 13
	SINGLE  shift 14
	REPEAT  shift 15
	HEXA  shift 16
	GOTO  shift 17
	.  error

	statement_list  goto 39
	statement  goto 19
	executable_statement  goto 20
	declare_pair  goto 21
	declare_var  goto 22
	declare_fun  goto 23
	if_statement  goto 24
	assign_statement  goto 25
	outf_statement  goto 26
	repeat_statement  goto 27
	goto_statement  goto 28
	mult_assign_statement  goto 29
	return_statement  goto 30
	tag_statement  goto 31
	var_type  goto 32
	declare_fun_header  goto 33
	if_cond  goto 34
	expr_pair  goto 35
	repeat_begin  goto 36
	id_list  goto 37
	elem_list  goto 38


state 5
	statement : error . ';'  (14)

	';'  shift 40
	.  error


state 6
	var_type : ID .  (52)
	assign_statement : ID . ASSIGN expr  (76)
	expr_pair : ID . '{' CTE '}'  (93)
	elem_list : ID .  (114)

	ASSIGN  shift 41
	'{'  shift 42
	ID  reduce 52
	FUN  reduce 52
	','  reduce 114


state 7
	tag_statement : TAG .  (118)

	.  reduce 118


state 8
	if_cond : IF . '(' cond ')'  (56)
	if_cond : IF . cond  (57)
	if_cond : IF . '(' cond  (58)
	if_cond : IF . cond ')'  (59)

	error  shift 43
	ID  shift 44
	CTE  shift 45
	CHARCH  shift 46
	'('  shift 47
	'-'  shift 48
	.  error

	expr  goto 49
	cond  goto 50
	expr_pair  goto 51
	term  goto 52
	fact  goto 53
	fun_invoc  goto 54


state 9
	prog : ID BEGIN . statement_list END  (1)
	prog : ID BEGIN . statement_list error  (5)

	error  shift 5
	ID  shift 6
	TAG  shift 7
	IF  shift 8
	OUTF  shift 10
	TYPEDEF  shift 11
	RET  shift 12
	UINTEGER  shift 13
	SINGLE  shift 14
	REPEAT  shift 15
	HEXA  shift 16
	GOTO  shift 17
	.  error

	statement_list  goto 55
	statement  goto 19
	executable_statement  goto 20
	declare_pair  goto 21
	declare_var  goto 22
	declare_fun  goto 23
	if_statement  goto 24
	assign_statement  goto 25
	outf_statement  goto 26
	repeat_statement  goto 27
	goto_statement  goto 28
	mult_assign_statement  goto 29
	return_statement  goto 30
	tag_statement  goto 31
	var_type  goto 32
	declare_fun_header  goto 33
	if_cond  goto 34
	expr_pair  goto 35
	repeat_begin  goto 36
	id_list  goto 37
	elem_list  goto 38


state 10
	outf_statement : OUTF . '(' expr ')'  (96)
	outf_statement : OUTF . '(' ')'  (97)
	outf_statement : OUTF . error  (98)

	error  shift 56
	'('  shift 57
	.  error


state 11
	declare_pair : TYPEDEF . PAIR '<' var_type '>' ID  (39)
	declare_pair : TYPEDEF . '<' var_type '>' ID  (40)
	declare_pair : TYPEDEF . PAIR var_type ID  (41)
	declare_pair : TYPEDEF . PAIR '<' var_type '>' error  (42)

	PAIR  shift 58
	'<'  shift 59
	.  error


state 12
	return_statement : RET . '(' expr ')'  (46)
	return_statement : RET . expr  (47)

	error  shift 60
	ID  shift 44
	CTE  shift 45
	CHARCH  shift 46
	'('  shift 61
	'-'  shift 48
	.  error

	expr  goto 62
	expr_pair  goto 51
	term  goto 52
	fact  goto 53
	fun_invoc  goto 54


state 13
	var_type : UINTEGER .  (49)

	.  reduce 49


state 14
	var_type : SINGLE .  (50)

	.  reduce 50


state 15
	repeat_begin : REPEAT . BEGIN  (109)

	BEGIN  shift 63
	.  error


state 16
	var_type : HEXA .  (51)

	.  reduce 51


state 17
	goto_statement : GOTO . TAG  (119)
	goto_statement : GOTO . error  (120)

	error  shift 64
	TAG  shift 65
	.  error


state 18
	prog : ID statement_list . END  (4)
	prog : ID statement_list .  (6)
	statement_list : statement_list . statement  (9)

	error  shift 5
	ID  shift 6
	TAG  shift 7
	IF  shift 8
	END  shift 66
	OUTF  shift 10
	TYPEDEF  shift 11
	RET  shift 12
	UINTEGER  shift 13
	SINGLE  shift 14
	REPEAT  shift 15
	HEXA  shift 16
	GOTO  shift 17
	$end  reduce 6

	statement  goto 67
	executable_statement  goto 20
	declare_pair  goto 21
	declare_var  goto 22
	declare_fun  goto 23
	if_statement  goto 24
	assign_statement  goto 25
	outf_statement  goto 26
	repeat_statement  goto 27
	goto_statement  goto 28
	mult_assign_statement  goto 29
	return_statement  goto 30
	tag_statement  goto 31
	var_type  goto 32
	declare_fun_header  goto 33
	if_cond  goto 34
	expr_pair  goto 35
	repeat_begin  goto 36
	id_list  goto 37
	elem_list  goto 38


state 19
	statement_list : statement .  (8)

	.  reduce 8


state 20
	statement : executable_statement .  (10)

	.  reduce 10


state 21
	statement : declare_pair . optional_semicolon  (11)
	optional_semicolon : .  (16)

	';'  shift 68
	$end  reduce 16
	error  reduce 16
	ID  reduce 16
	TAG  reduce 16
	IF  reduce 16
	END  reduce 16
	OUTF  reduce 16
	TYPEDEF  reduce 16
	RET  reduce 16
	UINTEGER  reduce 16
	SINGLE  reduce 16
	REPEAT  reduce 16
	HEXA  reduce 16
	GOTO  reduce 16

	optional_semicolon  goto 69


state 22
	statement : declare_var .  (12)

	.  reduce 12


state 23
	statement : declare_fun .  (13)

	.  reduce 13


state 24
	executable_statement : if_statement . optional_semicolon  (19)
	optional_semicolon : .  (16)

	';'  shift 68
	$end  reduce 16
	error  reduce 16
	ID  reduce 16
	TAG  reduce 16
	IF  reduce 16
	ELSE  reduce 16
	END  reduce 16
	END_IF  reduce 16
	OUTF  reduce 16
	TYPEDEF  reduce 16
	RET  reduce 16
	UINTEGER  reduce 16
	SINGLE  reduce 16
	REPEAT  reduce 16
	HEXA  reduce 16
	GOTO  reduce 16

	optional_semicolon  goto 70


state 25
	executable_statement : assign_statement . optional_semicolon  (20)
	optional_semicolon : .  (16)

	';'  shift 68
	$end  reduce 16
	error  reduce 16
	ID  reduce 16
	TAG  reduce 16
	IF  reduce 16
	ELSE  reduce 16
	END  reduce 16
	END_IF  reduce 16
	OUTF  reduce 16
	TYPEDEF  reduce 16
	RET  reduce 16
	UINTEGER  reduce 16
	SINGLE  reduce 16
	REPEAT  reduce 16
	HEXA  reduce 16
	GOTO  reduce 16

	optional_semicolon  goto 71


state 26
	executable_statement : outf_statement . optional_semicolon  (21)
	optional_semicolon : .  (16)

	';'  shift 68
	$end  reduce 16
	error  reduce 16
	ID  reduce 16
	TAG  reduce 16
	IF  reduce 16
	ELSE  reduce 16
	END  reduce 16
	END_IF  reduce 16
	OUTF  reduce 16
	TYPEDEF  reduce 16
	RET  reduce 16
	UINTEGER  reduce 16
	SINGLE  reduce 16
	REPEAT  reduce 16
	HEXA  reduce 16
	GOTO  reduce 16

	optional_semicolon  goto 72


state 27
	executable_statement : repeat_statement . optional_semicolon  (22)
	optional_semicolon : .  (16)

	';'  shift 68
	$end  reduce 16
	error  reduce 16
	ID  reduce 16
	TAG  reduce 16
	IF  reduce 16
	ELSE  reduce 16
	END  reduce 16
	END_IF  reduce 16
	OUTF  reduce 16
	TYPEDEF  reduce 16
	RET  reduce 16
	UINTEGER  reduce 16
	SINGLE  reduce 16
	REPEAT  reduce 16
	HEXA  reduce 16
	GOTO  reduce 16

	optional_semicolon  goto 73


state 28
	executable_statement : goto_statement . optional_semicolon  (23)
	optional_semicolon : .  (16)

	';'  shift 68
	$end  reduce 16
	error  reduce 16
	ID  reduce 16
	TAG  reduce 16
	IF  reduce 16
	ELSE  reduce 16
	END  reduce 16
	END_IF  reduce 16
	OUTF  reduce 16
	TYPEDEF  reduce 16
	RET  reduce 16
	UINTEGER  reduce 16
	SINGLE  reduce 16
	REPEAT  reduce 16
	HEXA  reduce 16
	GOTO  reduce 16

	optional_semicolon  goto 74


state 29
	executable_statement : mult_assign_statement . optional_semicolon  (24)
	optional_semicolon : .  (16)

	';'  shift 68
	$end  reduce 16
	error  reduce 16
	ID  reduce 16
	TAG  reduce 16
	IF  reduce 16
	ELSE  reduce 16
	END  reduce 16
	END_IF  reduce 16
	OUTF  reduce 16
	TYPEDEF  reduce 16
	RET  reduce 16
	UINTEGER  reduce 16
	SINGLE  reduce 16
	REPEAT  reduce 16
	HEXA  reduce 16
	GOTO  reduce 16

	optional_semicolon  goto 75


state 30
	executable_statement : return_statement . optional_semicolon  (25)
	optional_semicolon : .  (16)

	';'  shift 68
	$end  reduce 16
	error  reduce 16
	ID  reduce 16
	TAG  reduce 16
	IF  reduce 16
	ELSE  reduce 16
	END  reduce 16
	END_IF  reduce 16
	OUTF  reduce 16
	TYPEDEF  reduce 16
	RET  reduce 16
	UINTEGER  reduce 16
	SINGLE  reduce 16
	REPEAT  reduce 16
	HEXA  reduce 16
	GOTO  reduce 16

	optional_semicolon  goto 76


state 31
	executable_statement : tag_statement . optional_not_semicolon  (26)
	optional_not_semicolon : .  (18)

	';'  shift 77
	$end  reduce 18
	error  reduce 18
	ID  reduce 18
	TAG  reduce 18
	IF  reduce 18
	ELSE  reduce 18
	END  reduce 18
	END_IF  reduce 18
	OUTF  reduce 18
	TYPEDEF  reduce 18
	RET  reduce 18
	UINTEGER  reduce 18
	SINGLE  reduce 18
	REPEAT  reduce 18
	HEXA  reduce 18
	GOTO  reduce 18

	optional_not_semicolon  goto 78


state 32
	declare_var : var_type . var_list ';'  (29)
	declare_var : var_type . var_list error  (30)
	declare_var : var_type . ID ';'  (31)
	declare_var : var_type . ID error  (32)
	declare_fun_header : var_type . FUN ID '(' parametro ')' BEGIN  (36)
	declare_fun_header : var_type . FUN error '(' parametro ')' BEGIN  (37)
	declare_fun_header : var_type . FUN ID '(' error ')' BEGIN  (38)
	assign_statement : var_type . ID ASSIGN expr  (78)

	ID  shift 79
	FUN  shift 80
	.  error

	var_list  goto 81


state 33
	declare_fun : declare_fun_header . fun_body END  (35)

	error  shift 5
	ID  shift 6
	TAG  shift 7
	IF  shift 8
	OUTF  shift 10
	TYPEDEF  shift 11
	RET  shift 12
	UINTEGER  shift 13
	SINGLE  shift 14
	REPEAT  shift 15
	HEXA  shift 16
	GOTO  shift 17
	.  error

	statement_list  goto 82
	statement  goto 19
	executable_statement  goto 20
	declare_pair  goto 21
	declare_var  goto 22
	declare_fun  goto 23
	if_statement  goto 24
	assign_statement  goto 25
	outf_statement  goto 26
	repeat_statement  goto 27
	goto_statement  goto 28
	mult_assign_statement  goto 29
	return_statement  goto 30
	tag_statement  goto 31
	var_type  goto 32
	declare_fun_header  goto 33
	fun_body  goto 83
	if_cond  goto 34
	expr_pair  goto 35
	repeat_begin  goto 36
	id_list  goto 37
	elem_list  goto 38


state 34
	if_statement : if_cond . then_statement END_IF  (53)
	if_statement : if_cond . then_statement error  (54)
	if_statement : if_cond . then_statement else_statement  (55)

	THEN  shift 84
	.  error

	then_statement  goto 85


state 35
	assign_statement : expr_pair . ASSIGN expr  (77)
	elem_list : expr_pair .  (115)

	ASSIGN  shift 86
	','  reduce 115


state 36
	repeat_statement : repeat_begin . executable_statement_list END UNTIL '(' cond ')'  (99)
	repeat_statement : repeat_begin . executable_statement_list END UNTIL cond  (100)
	repeat_statement : repeat_begin . executable_statement_list END UNTIL '(' cond  (101)
	repeat_statement : repeat_begin . executable_statement_list END UNTIL cond ')'  (102)
	repeat_statement : repeat_begin . END UNTIL '(' cond ')'  (103)
	repeat_statement : repeat_begin . END UNTIL cond  (104)
	repeat_statement : repeat_begin . END UNTIL '(' cond  (105)
	repeat_statement : repeat_begin . END UNTIL cond ')'  (106)
	repeat_statement : repeat_begin . executable_statement_list END '(' cond ')'  (107)
	repeat_statement : repeat_begin . executable_statement_list END UNTIL '(' ')'  (108)

	ID  shift 6
	TAG  shift 7
	IF  shift 8
	END  shift 87
	OUTF  shift 10
	RET  shift 12
	UINTEGER  shift 13
	SINGLE  shift 14
	REPEAT  shift 15
	HEXA  shift 16
	GOTO  shift 17
	.  error

	executable_statement  goto 88
	if_statement  goto 24
	assign_statement  goto 25
	outf_statement  goto 26
	repeat_statement  goto 27
	goto_statement  goto 28
	mult_assign_statement  goto 29
	return_statement  goto 30
	tag_statement  goto 31
	executable_statement_list  goto 89
	var_type  goto 90
	if_cond  goto 34
	expr_pair  goto 35
	repeat_begin  goto 36
	id_list  goto 37
	elem_list  goto 38


state 37
	mult_assign_statement : id_list . ASSIGN expr_list  (110)
	mult_assign_statement : id_list . ASSIGN error  (111)
	id_list : id_list . ',' elem_list  (113)

	ASSIGN  shift 91
	','  shift 92
	.  error


state 38
	id_list : elem_list . ',' elem_list  (112)

	','  shift 93
	.  error


state 39
	prog : error BEGIN statement_list . END  (2)
	statement_list : statement_list . statement  (9)

	error  shift 5
	ID  shift 6
	TAG  shift 7
	IF  shift 8
	END  shift 94
	OUTF  shift 10
	TYPEDEF  shift 11
	RET  shift 12
	UINTEGER  shift 13
	SINGLE  shift 14
	REPEAT  shift 15
	HEXA  shift 16
	GOTO  shift 17
	.  error

	statement  goto 67
	executable_statement  goto 20
	declare_pair  goto 21
	declare_var  goto 22
	declare_fun  goto 23
	if_statement  goto 24
	assign_statement  goto 25
	outf_statement  goto 26
	repeat_statement  goto 27
	goto_statement  goto 28
	mult_assign_statement  goto 29
	return_statement  goto 30
	tag_statement  goto 31
	var_type  goto 32
	declare_fun_header  goto 33
	if_cond  goto 34
	expr_pair  goto 35
	repeat_begin  goto 36
	id_list  goto 37
	elem_list  goto 38


state 40
	statement : error ';' .  (14)

	.  reduce 14


state 41
	assign_statement : ID ASSIGN . expr  (76)

	error  shift 60
	ID  shift 44
	CTE  shift 45
	CHARCH  shift 46
	'-'  shift 48
	.  error

	expr  goto 95
	expr_pair  goto 51
	term  goto 52
	fact  goto 53
	fun_invoc  goto 54


state 42
	expr_pair : ID '{' . CTE '}'  (93)

	CTE  shift 96
	.  error


state 43
	cond : error .  (69)
	expr : error .  (82)

	$end  reduce 69
	error  reduce 69
	ID  reduce 69
	NEQ  reduce 82
	LEQ  reduce 82
	MEQ  reduce 82
	TAG  reduce 69
	IF  reduce 69
	THEN  reduce 69
	ELSE  reduce 69
	END  reduce 69
	END_IF  reduce 69
	OUTF  reduce 69
	TYPEDEF  reduce 69
	RET  reduce 69
	UINTEGER  reduce 69
	SINGLE  reduce 69
	REPEAT  reduce 69
	HEXA  reduce 69
	GOTO  reduce 69
	';'  reduce 69
	')'  reduce 69
	'<'  reduce 82
	'>'  reduce 82
	'='  reduce 82
	'+'  reduce 82
	'-'  reduce 82


state 44
	fact : ID .  (86)
	expr_pair : ID . '{' CTE '}'  (93)
	fun_invoc : ID . '(' expr ')'  (94)
	fun_invoc : ID . '(' expr error ')'  (95)

	'('  shift 97
	'{'  shift 42
	$end  reduce 86
	error  reduce 86
	ID  reduce 86
	NEQ  reduce 86
	LEQ  reduce 86
	MEQ  reduce 86
	TAG  reduce 86
	IF  reduce 86
	THEN  reduce 86
	ELSE  reduce 86
	END  reduce 86
	END_IF  reduce 86
	OUTF  reduce 86
	TYPEDEF  reduce 86
	RET  reduce 86
	UINTEGER  reduce 86
	SINGLE  reduce 86
	REPEAT  reduce 86
	HEXA  reduce 86
	GOTO  reduce 86
	';'  reduce 86
	','  reduce 86
	')'  reduce 86
	'<'  reduce 86
	'>'  reduce 86
	'='  reduce 86
	'+'  reduce 86
	'-'  reduce 86
	'*'  reduce 86
	'/'  reduce 86


state 45
	fact : CTE .  (87)

	.  reduce 87


state 46
	fact : CHARCH .  (92)

	.  reduce 92


state 47
	if_cond : IF '(' . cond ')'  (56)
	if_cond : IF '(' . cond  (58)

	error  shift 43
	ID  shift 44
	CTE  shift 45
	CHARCH  shift 46
	'-'  shift 48
	.  error

	expr  goto 49
	cond  goto 98
	expr_pair  goto 51
	term  goto 52
	fact  goto 53
	fun_invoc  goto 54


state 48
	fact : '-' . CTE  (88)
	fact : '-' . ID  (89)

	ID  shift 99
	CTE  shift 100
	.  error


state 49
	cond : expr . cond_op expr  (68)
	expr : expr . '+' term  (79)
	expr : expr . '-' term  (80)

	NEQ  shift 101
	LEQ  shift 102
	MEQ  shift 103
	'<'  shift 104
	'>'  shift 105
	'='  shift 106
	'+'  shift 107
	'-'  shift 108
	.  error

	cond_op  goto 109


state 50
	if_cond : IF cond .  (57)
	if_cond : IF cond . ')'  (59)

	')'  shift 110
	THEN  reduce 57


state 51
	fact : expr_pair .  (91)

	.  reduce 91


state 52
	expr : term .  (81)
	term : term . '*' fact  (83)
	term : term . '/' fact  (84)

	'*'  shift 111
	'/'  shift 112
	$end  reduce 81
	error  reduce 81
	ID  reduce 81
	NEQ  reduce 81
	LEQ  reduce 81
	MEQ  reduce 81
	TAG  reduce 81
	IF  reduce 81
	THEN  reduce 81
	ELSE  reduce 81
	END  reduce 81
	END_IF  reduce 81
	OUTF  reduce 81
	TYPEDEF  reduce 81
	RET  reduce 81
	UINTEGER  reduce 81
	SINGLE  reduce 81
	REPEAT  reduce 81
	HEXA  reduce 81
	GOTO  reduce 81
	';'  reduce 81
	','  reduce 81
	')'  reduce 81
	'<'  reduce 81
	'>'  reduce 81
	'='  reduce 81
	'+'  reduce 81
	'-'  reduce 81


state 53
	term : fact .  (85)

	.  reduce 85


state 54
	fact : fun_invoc .  (90)

	.  reduce 90


state 55
	prog : ID BEGIN statement_list . END  (1)
	prog : ID BEGIN statement_list . error  (5)
	statement_list : statement_list . statement  (9)

	error  shift 113
	ID  shift 6
	TAG  shift 7
	IF  shift 8
	END  shift 114
	OUTF  shift 10
	TYPEDEF  shift 11
	RET  shift 12
	UINTEGER  shift 13
	SINGLE  shift 14
	REPEAT  shift 15
	HEXA  shift 16
	GOTO  shift 17
	.  error

	statement  goto 67
	executable_statement  goto 20
	declare_pair  goto 21
	declare_var  goto 22
	declare_fun  goto 23
	if_statement  goto 24
	assign_statement  goto 25
	outf_statement  goto 26
	repeat_statement  goto 27
	goto_statement  goto 28
	mult_assign_statement  goto 29
	return_statement  goto 30
	tag_statement  goto 31
	var_type  goto 32
	declare_fun_header  goto 33
	if_cond  goto 34
	expr_pair  goto 35
	repeat_begin  goto 36
	id_list  goto 37
	elem_list  goto 38


state 56
	outf_statement : OUTF error .  (98)

	.  reduce 98


state 57
	outf_statement : OUTF '(' . expr ')'  (96)
	outf_statement : OUTF '(' . ')'  (97)

	error  shift 60
	ID  shift 44
	CTE  shift 45
	CHARCH  shift 46
	')'  shift 115
	'-'  shift 48
	.  error

	expr  goto 116
	expr_pair  goto 51
	term  goto 52
	fact  goto 53
	fun_invoc  goto 54


state 58
	declare_pair : TYPEDEF PAIR . '<' var_type '>' ID  (39)
	declare_pair : TYPEDEF PAIR . var_type ID  (41)
	declare_pair : TYPEDEF PAIR . '<' var_type '>' error  (42)

	ID  shift 117
	UINTEGER  shift 13
	SINGLE  shift 14
	HEXA  shift 16
	'<'  shift 118
	.  error

	var_type  goto 119


state 59
	declare_pair : TYPEDEF '<' . var_type '>' ID  (40)

	ID  shift 117
	UINTEGER  shift 13
	SINGLE  shift 14
	HEXA  shift 16
	.  error

	var_type  goto 120


state 60
	expr : error .  (82)

	.  reduce 82


state 61
	return_statement : RET '(' . expr ')'  (46)

	error  shift 60
	ID  shift 44
	CTE  shift 45
	CHARCH  shift 46
	'-'  shift 48
	.  error

	expr  goto 121
	expr_pair  goto 51
	term  goto 52
	fact  goto 53
	fun_invoc  goto 54


state 62
	return_statement : RET expr .  (47)
	expr : expr . '+' term  (79)
	expr : expr . '-' term  (80)

	'+'  shift 107
	'-'  shift 108
	$end  reduce 47
	error  reduce 47
	ID  reduce 47
	TAG  reduce 47
	IF  reduce 47
	ELSE  reduce 47
	END  reduce 47
	END_IF  reduce 47
	OUTF  reduce 47
	TYPEDEF  reduce 47
	RET  reduce 47
	UINTEGER  reduce 47
	SINGLE  reduce 47
	REPEAT  reduce 47
	HEXA  reduce 47
	GOTO  reduce 47
	';'  reduce 47


state 63
	repeat_begin : REPEAT BEGIN .  (109)

	.  reduce 109


state 64
	goto_statement : GOTO error .  (120)

	.  reduce 120


state 65
	goto_statement : GOTO TAG .  (119)

	.  reduce 119


state 66
	prog : ID statement_list END .  (4)

	.  reduce 4


state 67
	statement_list : statement_list statement .  (9)

	.  reduce 9


state 68
	optional_semicolon : ';' .  (15)

	.  reduce 15


state 69
	statement : declare_pair optional_semicolon .  (11)

	.  reduce 11


state 70
	executable_statement : if_statement optional_semicolon .  (19)

	.  reduce 19


state 71
	executable_statement : assign_statement optional_semicolon .  (20)

	.  reduce 20


state 72
	executable_statement : outf_statement optional_semicolon .  (21)

	.  reduce 21


state 73
	executable_statement : repeat_statement optional_semicolon .  (22)

	.  reduce 22


state 74
	executable_statement : goto_statement optional_semicolon .  (23)

	.  reduce 23


state 75
	executable_statement : mult_assign_statement optional_semicolon .  (24)

	.  reduce 24


state 76
	executable_statement : return_statement optional_semicolon .  (25)

	.  reduce 25


state 77
	optional_not_semicolon : ';' .  (17)

	.  reduce 17


state 78
	executable_statement : tag_statement optional_not_semicolon .  (26)

	.  reduce 26


state 79
	declare_var : var_type ID . ';'  (31)
	declare_var : var_type ID . error  (32)
	var_list : ID . ',' ID  (33)
	assign_statement : var_type ID . ASSIGN expr  (78)

	error  shift 122
	ASSIGN  shift 123
	';'  shift 124
	','  shift 125
	.  error


state 80
	declare_fun_header : var_type FUN . ID '(' parametro ')' BEGIN  (36)
	declare_fun_header : var_type FUN . error '(' parametro ')' BEGIN  (37)
	declare_fun_header : var_type FUN . ID '(' error ')' BEGIN  (38)

	error  shift 126
	ID  shift 127
	.  error


state 81
	declare_var : var_type var_list . ';'  (29)
	declare_var : var_type var_list . error  (30)
	var_list : var_list . ',' ID  (34)

	error  shift 128
	';'  shift 129
	','  shift 130
	.  error


state 82
	statement_list : statement_list . statement  (9)
	fun_body : statement_list .  (48)

	error  shift 5
	ID  shift 6
	TAG  shift 7
	IF  shift 8
	OUTF  shift 10
	TYPEDEF  shift 11
	RET  shift 12
	UINTEGER  shift 13
	SINGLE  shift 14
	REPEAT  shift 15
	HEXA  shift 16
	GOTO  shift 17
	END  reduce 48

	statement  goto 67
	executable_statement  goto 20
	declare_pair  goto 21
	declare_var  goto 22
	declare_fun  goto 23
	if_statement  goto 24
	assign_statement  goto 25
	outf_statement  goto 26
	repeat_statement  goto 27
	goto_statement  goto 28
	mult_assign_statement  goto 29
	return_statement  goto 30
	tag_statement  goto 31
	var_type  goto 32
	declare_fun_header  goto 33
	if_cond  goto 34
	expr_pair  goto 35
	repeat_begin  goto 36
	id_list  goto 37
	elem_list  goto 38


state 83
	declare_fun : declare_fun_header fun_body . END  (35)

	END  shift 131
	.  error


state 84
	then_statement : THEN . ctrl_block_statement  (60)
	then_statement : THEN . error  (61)

	error  shift 132
	ID  shift 6
	TAG  shift 7
	IF  shift 8
	OUTF  shift 10
	RET  shift 12
	UINTEGER  shift 13
	SINGLE  shift 14
	REPEAT  shift 15
	HEXA  shift 16
	GOTO  shift 17
	.  error

	executable_statement  goto 88
	if_statement  goto 24
	assign_statement  goto 25
	outf_statement  goto 26
	repeat_statement  goto 27
	goto_statement  goto 28
	mult_assign_statement  goto 29
	return_statement  goto 30
	tag_statement  goto 31
	executable_statement_list  goto 133
	var_type  goto 90
	if_cond  goto 34
	ctrl_block_statement  goto 134
	expr_pair  goto 35
	repeat_begin  goto 36
	id_list  goto 37
	elem_list  goto 38


state 85
	if_statement : if_cond then_statement . END_IF  (53)
	if_statement : if_cond then_statement . error  (54)
	if_statement : if_cond then_statement . else_statement  (55)

	error  shift 135
	ELSE  shift 136
	END_IF  shift 137
	.  error

	else_statement  goto 138
	else_tk  goto 139


state 86
	assign_statement : expr_pair ASSIGN . expr  (77)
